--- a/css/main.css
+++ b/css/main.css
@@ -69,9 +69,10 @@ body {
 
 .logo {
   font-family: Raleway;
-  font-weight: 700;
   font-size: 26px;
+  font-weight: 700;
   line-height: 1.19;
+  letter-spacing: 0.03em;
   color: var(--accent-color);
 }
 
@@ -338,8 +339,8 @@ body {
 .header-navigation__link {
   padding-top: 32px;
   padding-bottom: 32px;
-  font-weight: 500;
   font-size: 14px;
+  font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-title-color);
@@ -361,12 +362,12 @@ body {
 }
 
 .header-contact__link {
-  display: flex;
-  align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
-  font-weight: 500;
+  display: flex;
+  align-items: center;
   font-size: 14px;
+  font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
@@ -418,13 +419,13 @@ body {
 .hero-section__title {
   max-width: 696px;
   margin-bottom: 30px;
-  font-weight: 900;
   font-size: 44px;
+  font-weight: 900;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
-  text-transform: uppercase;
   color: var(--secondary-title-color);
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .hero-section__btn {
@@ -442,11 +443,11 @@ body {
 
 .priveleges-section__title {
   margin-bottom: 10px;
-  font-weight: 700;
   font-size: 14px;
+  font-weight: 700;
   line-height: 1.14;
+  color: var(--primary-title-color);
   text-transform: uppercase;
-  color: vat(--primary-title-color);
 }
 
 .priveleges-section__list {
@@ -534,11 +535,11 @@ body {
 
 .team-section__title {
   margin-bottom: 50px;
+  font-size: 34px;
   font-weight: 700;
-  font-size: 36px;
   line-height: 1.16;
-  text-align: center;
   color: var(--primary-title-color);
+  text-align: center;
 }
 
 .team-list {
@@ -558,19 +559,19 @@ body {
 
 .team-block {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   padding: 30px 32px;
 }
 
 .team-block__name {
   margin-bottom: 10px;
-  font-weight: 500;
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.18;
-  text-align: center;
   color: var(--primary-title-color);
+  text-align: center;
 }
 
 .team-block__text {
@@ -752,8 +753,8 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color var(--timing-function);
@@ -812,11 +813,11 @@ body {
   padding: 10px 28px;
   max-width: 200px;
   height: 50px;
-  font-weight: 700;
   font-size: 16px;
-  line-height: calc(30 / 16);
+  font-weight: 700;
+  line-height: 1.875;
   letter-spacing: 0.06em;
-  color: #ffffff;
+  color: var(--secondary-title-color);
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
