--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -17,9 +17,10 @@
 }
 
 .clients-list__link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex(flex, center, center, null, null);
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
   width: 170px;
   height: 92px;
 
