--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,7 @@
 .contacts {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  @include section(60px, 60px);
+  // padding-top: 60px;
+  // padding-bottom: 60px;
 
   background-color: var(--background-primary-color);
   .container {
@@ -92,9 +93,10 @@
 .joinus-list__link {
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flex(flex, center, center, null, null);
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
 
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
@@ -159,18 +161,20 @@
   max-width: 200px;
   height: 50px;
 
-  font-weight: 700;
-  font-size: 16px;
-  line-height: calc(30 / 16);
-  letter-spacing: 0.06em;
+  @include font(null, 16px, 700, 1.875, 0.06em, var(--secondary-title-color));
+  // font-weight: 700;
+  // font-size: 16px;
+  // line-height: calc(30 / 16);
+  // letter-spacing: 0.06em;
 
-  color: #ffffff;
+  // color: #ffffff;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex(flex, center, center, null, null);
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
 }
 
 .subscribe-form__icon {
