--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -13,21 +13,24 @@
 }
 
 .header-navigation__item {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  @include section(32px, 32px);
+  // padding-top: 32px;
+  // padding-bottom: 32px;
   &:not(:last-child) {
     margin-right: 50px;
   }
 }
 
 .header-navigation__link {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--primary-title-color);
+  @include section(32px, 32px);
+  // padding-top: 32px;
+  // padding-bottom: 32px;
+  @include font(null, 14px, 500, 1.14, 0.02em, var(--primary-title-color));
+  // font-weight: 500;
+  // font-size: 14px;
+  // line-height: 1.14;
+  // letter-spacing: 0.02em;
+  // color: var(--primary-title-color);
   position: relative;
 
   transition: color var(--timing-function);
@@ -47,16 +50,19 @@
 }
 
 .header-contact__link {
+  @include section(32px, 32px);
+  // padding-top: 32px;
+  // padding-bottom: 32px;
   display: flex;
   align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
 
-  color: var(--secondary-text-color);
+  @include font(null, 14px, 500, 1.14, 0.02em, var(--secondary-text-color));
+  // font-weight: 500;
+  // font-size: 14px;
+  // line-height: 1.14;
+  // letter-spacing: 0.02em;
+
+  // color: var(--secondary-text-color);
   transition: color var(--timing-function);
   &:hover,
   &:focus {
