--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -24,14 +24,14 @@
 .hero-section__title {
   max-width: 696px;
   margin-bottom: 30px;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-
+  @include font(null, 44px, 900, 1.36, 0.06em, var(--secondary-title-color));
+  // font-weight: 900;
+  // font-size: 44px;
+  // line-height: 1.36;
+  // letter-spacing: 0.06em;
+  // color: var(--secondary-title-color);
   text-align: center;
-  letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: var(--secondary-title-color);
 }
 
 .hero-section__btn {
