--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -5,11 +5,12 @@
 .team-section__title {
   margin-bottom: 50px;
 
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+  @include font(null, 34px, 700, 1.16, null, var(--primary-title-color));
+  // font-weight: 700;
+  // font-size: 36px;
+  // line-height: 1.16;
+  // color: var(--primary-title-color);
   text-align: center;
-  color: var(--primary-title-color);
 }
 
 .team-list {
@@ -32,21 +33,22 @@
 }
 
 .team-block {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  @include flex(flex, center, center, column, null);
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  // justify-content: center;
   padding: 30px 32px;
 }
 
 .team-block__name {
   margin-bottom: 10px;
-
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.18;
+  @include font(null, 16px, 500, 1.18, null, var(--primary-title-color));
+  // font-weight: 500;
+  // font-size: 16px;
+  // line-height: 1.18;
+  // color: var(--primary-title-color);
   text-align: center;
-  color: var(--primary-title-color);
 }
 .team-block__text {
   margin-bottom: 10px;
