--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,7 +1,6 @@
 .hero-section {
-  @include section(200px, 200px);
-  // padding-top: 200px;
-  // padding-bottom: 200px;
+  @include section(118px, 118px);
+  display: flex;
   margin: 0 auto;
   max-width: 1600px;
   background-repeat: no-repeat;
@@ -15,24 +14,39 @@
     url(../images/bg1.jpg);
 
   background-color: var(--background-primary-color);
-  .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+  @media screen and (min-width: 1200px) {
+    @include section(200px, 200px);
   }
 }
 
+.hero-section__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .hero-section__title {
-  max-width: 696px;
   margin-bottom: 30px;
-  @include font(null, 44px, 900, 1.36, 0.06em, var(--secondary-title-color));
-  // font-weight: 900;
-  // font-size: 44px;
-  // line-height: 1.36;
-  // letter-spacing: 0.06em;
-  // color: var(--secondary-title-color);
+  @include font(null, 26px, 900, null, 0.06em, var(--secondary-title-color));
   text-align: center;
   text-transform: uppercase;
+
+  @media screen and (max-width: 480px) and (min-width: 768px) {
+    max-width: 360px;
+    font-size: 26px;
+    line-height: 1.62;
+  }
+  @media screen and (min-width: 768px) {
+    max-width: 360px;
+    font-size: 26px;
+    line-height: 1.62;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .hero-section__btn {
