--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,4 +1,12 @@
 .section {
-  @include section(94px, 94px); // padding-top: 94px
-  // padding-bottom: 94px;;
+  @include section(60, 60px);
+  @media screen and (max-width: 1199) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
