--- a/sass/layout/_what.scss
+++ b/sass/layout/_what.scss
@@ -1,5 +1,10 @@
 .what-section {
-  padding-bottom: 94px;
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 94px;
+  }
 }
 .what-section__title {
   margin-bottom: 50px;
