--- a/css/main.css
+++ b/css/main.css
@@ -757,18 +757,39 @@ body {
 
 .clients-list {
   display: flex;
-  margin: -15px;
+  flex-wrap: wrap;
+  margin-left: -15px;
+  margin-top: -15px;
 }
 
-.clients-list__item {
-  margin: 15px;
+@media screen and (max-width: 767px) {
+  .clients-list__item {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc(100% / 2 - 30px);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-list__item {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc(100% / 3 - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list__item {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc(100% / 6 - 30px);
+  }
 }
 
 .clients-list__link {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 170px;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
