--- a/css/main.css
+++ b/css/main.css
@@ -359,6 +359,12 @@ body {
   align-items: center;
 }
 
+@media screen and (max-width: 767px) {
+  .header-navigation__list {
+    display: none;
+  }
+}
+
 .header-navigation__item {
   padding-top: 32px;
   padding-bottom: 32px;
@@ -404,6 +410,12 @@ body {
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
   transition: color var(--timing-function);
+}
+
+@media screen and (max-width: 767px) {
+  .header-contact__link {
+    display: none;
+  }
 }
 
 .header-contact__link:hover, .header-contact__link:focus {
@@ -819,8 +831,23 @@ body {
 }
 
 .contacts .container {
-  display: flex;
   align-items: baseline;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-container {
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer-address {
+    text-align: center;
+    margin-bottom: 60px;
+  }
 }
 
 .logo-contacts {
@@ -865,9 +892,10 @@ body {
 }
 
 /* ----------------Jon Us------------- */
-.joinus {
-  width: 206px;
-  margin-left: 70px;
+@media screen and (max-width: 767px) {
+  .joinus {
+    margin-bottom: 60px;
+  }
 }
 
 .joinus .icon-social {
@@ -883,6 +911,12 @@ body {
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--secondary-title-color);
+}
+
+@media screen and (max-width: 767px) {
+  .joinus__title {
+    text-align: center;
+  }
 }
 
 .joinus-list {
@@ -914,9 +948,21 @@ body {
   background-color: var(--accent-color);
 }
 
-.subscribe {
-  width: 570px;
-  margin: 0 auto;
+@media screen and (max-width: 767px) {
+  .subscribe {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .subscribe {
+    margin-top: 60px;
+    width: 450px;
+  }
 }
 
 .subscribe__title {
@@ -926,10 +972,22 @@ body {
   line-height: calc(16 / 14);
   text-transform: uppercase;
   color: var(--secondary-title-color);
+  text-align: center;
+}
+
+.subscribe-form {
+  width: 100%;
 }
 
 .subscribe-form__block {
-  display: flex;
+  display: block;
+  align-items: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-form__block {
+    display: flex;
+  }
 }
 
 .subscribe-form__input {
@@ -946,6 +1004,19 @@ body {
   color: var(--secondary-title-color);
 }
 
+@media screen and (max-width: 1199px) {
+  .subscribe-form__input {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-form__input {
+    width: 358px;
+    margin-right: 12px;
+  }
+}
+
 .subscribe-form__input::placeholder {
   font-size: 16px;
   line-height: calc(20 / 16);
@@ -959,7 +1030,7 @@ body {
 }
 
 .subscribe-form__btn {
-  margin-left: 12px;
+  margin: 0 auto;
   padding: 10px 28px;
   max-width: 200px;
   height: 50px;
@@ -982,8 +1053,20 @@ body {
 
 .list-btn {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
   margin-bottom: 50px;
+}
+
+@media screen and (min-width: 768px) {
+  .list-btn {
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .list-btn {
+    justify-content: center;
+  }
 }
 
 .list-btn__item:not(:last-child) {
@@ -995,12 +1078,25 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   padding: 6px 22px;
+  margin-bottom: 15px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   color: var(--primary-text-color);
   background-color: var(--background-third-color);
   border-radius: 4px;
+}
+
+@media screen and (min-width: 768px) {
+  .list-btn__option {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .list-btn__option {
+    margin-bottom: 0;
+  }
 }
 
 .list-btn__option:hover, .list-btn__option:focus {
@@ -1083,5 +1179,180 @@ body {
   font-size: 16px;
   line-height: 1.87;
   color: var(--secondary-text-color);
+}
+
+.mob-menu__icon-close {
+  width: 18px;
+  height: 18px;
+  transition: fill var(--timing-function);
+}
+
+.mobile-nav {
+  position: fixed;
+  top: 0;
+  background-color: var(--secondary-title-color);
+  width: 100vw;
+  height: 100vh;
+  z-index: 2;
+  overflow-y: scroll;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-nav {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .mobile-nav {
+    display: none;
+  }
+}
+
+.mobile-nav .container {
+  position: relative;
+  padding: 48px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.mobile-nav .menu-close {
+  position: absolute;
+  top: 20px;
+  right: 27px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  transition: fill var(--timing-function);
+}
+
+.mobile-nav .menu-close:hover, .mobile-nav .menu-close:focus {
+  fill: var(--accent-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .mobile-nav .menu-close {
+    display: none;
+  }
+}
+
+.menu-open {
+  top: 25px;
+  right: 21px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  transition: fill var(--timing-function);
+}
+
+.menu-open:hover, .menu-open:focus {
+  fill: var(--accent-color);
+}
+
+@media screen and (min-width: 768px), (min-width: 1200px) {
+  .menu-open {
+    display: none;
+  }
+}
+
+.mobile-nav.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.mobile-menu__item {
+  margin-bottom: 36px;
+}
+
+.mobile-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  color: var(--primary-title-color);
+  transition: color var(--timing-function);
+}
+
+.mobile-menu__link:hover, .mobile-menu__link:focus {
+  color: var(--accent-color);
+}
+
+@media screen and (max-width: 480px) {
+  .mobile-menu__link {
+    font-size: 10vw;
+  }
+}
+
+.current-link {
+  color: var(--accent-color);
+}
+
+.mobile-contacts {
+  margin-bottom: 64px;
+}
+
+.mobile-contacts .mobile-contacts__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-contacts .mobile-contacts__item .mobile-contacts__link-telephone {
+  color: var(--accent-color);
+}
+
+@media screen and (min-width: 480px) {
+  .mobile-contacts .mobile-contacts__item .mobile-contacts__link-telephone {
+    font-size: 34px;
+    line-height: 1.17;
+  }
+}
+
+.mobile-contacts .mobile-contacts__link {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+}
+
+.mobile-contacts .mobile-contacts__link:hover, .mobile-contacts .mobile-contacts__link:focus {
+  color: var(--accent-color);
+}
+
+@media screen and (max-width: 480px) {
+  .mobile-contacts .mobile-contacts__link {
+    font-size: 8vw;
+  }
+}
+
+.mobile-network {
+  display: flex;
+}
+
+@media screen and (max-width: 480px) {
+  .mobile-network {
+    flex-wrap: wrap;
+  }
+}
+
+.mobile-network__item:not(:last-child) {
+  padding-right: 10px;
+  margin-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mobile-network__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+}
+
+.mobile-network__link:hover, .mobile-network__link:focus {
+  color: var(--accent-color);
 }
 /*# sourceMappingURL=main.css.map */
