--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,6 +8,9 @@
 }
 
 .header-navigation__list {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
   display: flex;
   align-items: center;
 }
@@ -50,6 +53,9 @@
 }
 
 .header-contact__link {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
   @include section(32px, 32px);
   // padding-top: 32px;
   // padding-bottom: 32px;
