--- a/sass/layout/_portfolio-hero.scss
+++ b/sass/layout/_portfolio-hero.scss
@@ -1,7 +1,15 @@
 .list-btn {
   display: flex;
-  justify-content: center;
+
+  flex-wrap: wrap;
   margin-bottom: 50px;
+
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+  }
+  @media screen and (min-width: 1200px) {
+    justify-content: center;
+  }
 }
 
 .list-btn__item:not(:last-child) {
@@ -17,14 +25,19 @@
     cubic-bezier(0.4, 0, 0.2, 1)
   );
   padding: 6px 22px;
+  margin-bottom: 15px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   color: var(--primary-text-color);
   background-color: var(--background-third-color);
   border-radius: 4px;
-  // transition: color var(--timing-function),
-  //   background-color var(--timing-function), box-shadow var(--timing-function);
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+  }
   &:hover,
   &:focus {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
