--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,6 @@ body {
 }
 
 .logo-link {
-  margin-right: 90px;
   padding-top: 24px;
   padding-bottom: 24px;
 }
@@ -95,19 +94,19 @@ body {
 
 @media screen and (min-width: 480px) {
   .container {
-    width: 480px;
+    max-width: 480px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    width: 768px;
+    max-width: 768px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
 
@@ -166,14 +165,21 @@ body {
 
 .modal {
   position: relative;
-  width: 528px;
-  min-height: 581px;
+  max-width: 450px;
   padding: 40px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: scale(1) rotate(-360deg);
   transition: transform 300ms;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-width: 528px;
+    max-height: 581px;
+    max-height: 609px;
+  }
 }
 
 .modal__close-btn {
@@ -352,6 +358,7 @@ body {
 .header-navigation {
   display: flex;
   align-items: center;
+  margin-left: auto;
 }
 
 .header-navigation__list {
@@ -396,12 +403,25 @@ body {
 
 .header-contact__list {
   display: flex;
-  margin-left: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .header-contact__list {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-contact__list {
+    display: flex;
+    flex-direction: row;
+    margin-left: auto;
+  }
 }
 
 .header-contact__link {
-  padding-top: 32px;
-  padding-bottom: 32px;
   display: flex;
   align-items: center;
   font-size: 14px;
@@ -418,6 +438,13 @@ body {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .header-contact__link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+
 .header-contact__link:hover, .header-contact__link:focus {
   color: var(--accent-color);
 }
@@ -425,10 +452,23 @@ body {
 .header-container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) {
+  .header-container {
+    justify-content: center;
+  }
 }
 
 .header-contact__item:not(:last-child) {
-  margin-right: 50px;
+  margin-right: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .header-contact__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
 
 .header-contact__icon {
@@ -451,14 +491,49 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg1.jpg);
   background-color: var(--background-primary-color);
+}
+
+@media screen and (max-width: 767px) {
+  .hero-section {
+    max-width: 480px;
+    background-image: linear-gradient(to right, rgba(47, 58, 57, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero_mobile_480@1x.jpg);
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .hero-section {
+    background-image: linear-gradient(to right, rgba(47, 58, 57, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero_mobile_480@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-section {
+    padding-top: 118px;
+    padding-bottom: 118px;
+    max-width: 768px;
+    background-image: linear-gradient(to right, rgba(47, 58, 57, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero_tablet_768@1x.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero-section {
+    background-image: linear-gradient(to right, rgba(47, 58, 57, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero_tablet_768@2x.jpg);
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .hero-section {
+    max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
+    background-image: linear-gradient(to right, rgba(47, 58, 57, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero_desktop_1600@1x.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero-section {
+    background-image: linear-gradient(to right, rgba(47, 58, 57, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero_desktop_1600@2x.jpg);
   }
 }
 
@@ -1113,17 +1188,31 @@ body {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
+@media screen and (min-width: 768px) {
+  .portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
 }
 
-.portfolio-list__item {
-  margin-left: 30px;
-  margin-top: 30px;
-  flex-basis: calc(100% / 3 - 30px);
+@media screen and (min-width: 768px) {
+  .portfolio-list__item {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc(100% / 2 - 30px);
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-list__item {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc(100% / 3 - 30px);
+    width: 370px;
+  }
 }
 
 .portfolio-list__link {
@@ -1240,8 +1329,8 @@ body {
 }
 
 .menu-open {
-  top: 25px;
-  right: 21px;
+  top: 10px;
+  right: 15px;
   margin: 0;
   padding: 0;
   border: none;
