--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,7 +1,6 @@
 .modal {
   position: relative;
-  width: 528px;
-  min-height: 581px;
+  max-width: 450px;
   padding: 40px;
 
   background: #ffffff;
@@ -11,6 +10,11 @@
 
   transform: scale(1) rotate(-360deg);
   transition: transform 300ms;
+  @media screen and (min-width: 1200px) {
+    max-width: 528px;
+    max-height: 581px;
+    max-height: 609px;
+  }
 }
 
 .modal__close-btn {
