--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,6 +5,7 @@
 .header-navigation {
   display: flex;
   align-items: center;
+  margin-left: auto;
 }
 
 .header-navigation__list {
@@ -17,8 +18,6 @@
 
 .header-navigation__item {
   @include section(32px, 32px);
-  // padding-top: 32px;
-  // padding-bottom: 32px;
   &:not(:last-child) {
     margin-right: 50px;
   }
@@ -26,14 +25,8 @@
 
 .header-navigation__link {
   @include section(32px, 32px);
-  // padding-top: 32px;
-  // padding-bottom: 32px;
   @include font(null, 14px, 500, 1.14, 0.02em, var(--primary-title-color));
-  // font-weight: 500;
-  // font-size: 14px;
-  // line-height: 1.14;
-  // letter-spacing: 0.02em;
-  // color: var(--primary-title-color);
+
   position: relative;
 
   transition: color var(--timing-function);
@@ -48,27 +41,31 @@
 }
 
 .header-contact__list {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-direction: row;
+    margin-left: auto;
+  }
   display: flex;
-  margin-left: auto;
 }
 
 .header-contact__link {
   @media screen and (max-width: 767px) {
     display: none;
   }
-  @include section(32px, 32px);
-  // padding-top: 32px;
-  // padding-bottom: 32px;
+  @media screen and (min-width: 1200px) {
+    @include section(32px, 32px);
+  }
   display: flex;
   align-items: center;
 
   @include font(null, 14px, 500, 1.14, 0.02em, var(--secondary-text-color));
-  // font-weight: 500;
-  // font-size: 14px;
-  // line-height: 1.14;
-  // letter-spacing: 0.02em;
 
-  // color: var(--secondary-text-color);
   transition: color var(--timing-function);
   &:hover,
   &:focus {
@@ -79,10 +76,17 @@
 .header-container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+  }
 }
 
 .header-contact__item:not(:last-child) {
-  margin-right: 50px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 10px;
+  }
+  margin-right: 30px;
 }
 
 .header-contact__icon {
