--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -6,20 +6,76 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/bg1.jpg);
-
   background-color: var(--background-primary-color);
 
+  @media screen and (max-width: 767px) {
+    max-width: 480px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 58, 57, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero/hero_mobile_480@1x.jpg);
+  }
+  @media screen and (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 58, 57, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero/hero_mobile_480@2x.jpg);
+  }
+
+  @media screen and (min-width: 768px) {
+    padding-top: 118px;
+    padding-bottom: 118px;
+    max-width: 768px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 58, 57, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero/hero_tablet_768@1x.jpg);
+
+    @media screen and (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 58, 57, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/hero/hero_tablet_768@2x.jpg);
+    }
+  }
+
   @media screen and (min-width: 1200px) {
-    @include section(200px, 200px);
+    max-width: 1600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 58, 57, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero/hero_desktop_1600@1x.jpg);
+    @media screen and (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 58, 57, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/hero/hero_desktop_1600@2x.jpg);
+    }
   }
 }
-
 .hero-section__container {
   display: flex;
   flex-direction: column;
