--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -4,14 +4,24 @@
   // flex-wrap: wrap;
   // margin-right: -30px;
   // margin-bottom: -30px;
-  @include list(flex, wrap, 30px, 30px);
+  @media screen and (min-width: 768px) {
+    @include list(flex, wrap, 30px, 30px);
+  }
 }
 
 .portfolio-list__item {
   // flex-basis: calc(100% / 3 - 30px);
   // margin-right: 30px;
   // margin-bottom: 30px;
-  @include item(30px, 30px, 3, 30px);
+
+  @media screen and (min-width: 768px) {
+    @include item(30px, 30px, 2, 30px);
+    width: 354px;
+  }
+  @media screen and (min-width: 1200px) {
+    @include item(30px, 30px, 3, 30px);
+    width: 370px;
+  }
 }
 
 .portfolio-list__link {
