--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,7 +5,7 @@
 .header-navigation {
   display: flex;
   align-items: center;
-  margin-left: auto;
+  margin-left: 88px;
 }
 
 .header-navigation__list {
@@ -42,22 +42,20 @@
 
 .header-contact__list {
   @media screen and (min-width: 768px) {
-    display: flex;
-    flex-direction: column;
     margin-left: auto;
   }
   @media screen and (min-width: 1200px) {
     display: flex;
-    flex-direction: row;
-    margin-left: auto;
+    align-items: center;
+    justify-content: center;
   }
-  display: flex;
 }
 
 .header-contact__link {
   @media screen and (max-width: 767px) {
     display: none;
   }
+
   @media screen and (min-width: 1200px) {
     @include section(32px, 32px);
   }
@@ -72,6 +70,16 @@
     color: var(--accent-color);
   }
 }
+.contact__link-top {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding-top: 21px;
+  }
+}
+.contact__link-bottom {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding-bottom: 21px;
+  }
+}
 
 .header-container {
   display: flex;
@@ -83,7 +91,7 @@
 }
 
 .header-contact__item:not(:last-child) {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     margin-bottom: 10px;
   }
   margin-right: 30px;
