--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -22,6 +22,9 @@
     text-align: center;
     margin-bottom: 60px;
   }
+  @media screen and (min-width: 480px) and (max-width: 1199px) {
+    text-align: center;
+  }
 }
 .logo-contacts {
   display: block;
@@ -83,7 +86,7 @@
 }
 
 .joinus__title {
-  @media screen and(max-width: 767px) {
+  @media screen and(max-width: 1199px) {
     text-align: center;
   }
   margin-bottom: 20px;
@@ -142,6 +145,9 @@
   }
 }
 .subscribe__title {
+  @media screen and(max-width: 1199px) {
+    text-align: center;
+  }
   margin-bottom: 20px;
 
   font-weight: 700;
@@ -150,7 +156,6 @@
 
   text-transform: uppercase;
   color: var(--secondary-title-color);
-  text-align: center;
 }
 
 .subscribe-form {
