--- a/sass/layout/_mob-menu.scss
+++ b/sass/layout/_mob-menu.scss
@@ -65,8 +65,10 @@
 
 // Закрытие меню
 .mobile-nav.is-hidden {
-  opacity: 0;
+  // opacity: 0;
   pointer-events: none;
+  transform: translateX(100%);
+  transition: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mobile-menu__item {
@@ -142,10 +144,15 @@
     font-size: 18px;
     line-height: 1.22;
     letter-spacing: 0.02em;
-    color: var(--secondary-text-color);
+    color: var(--accent-color);
     &:hover,
     &:focus {
-      color: var(--accent-color);
+      color: var(--secondary-text-color);
     }
   }
+}
+
+.mobile-nav {
+  transform: translateX(0);
+  transition: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
