--- a/css/main.css
+++ b/css/main.css
@@ -1321,7 +1321,6 @@ body {
   height: 100vh;
   z-index: 2;
   overflow-y: scroll;
-  display: block;
 }
 
 @media screen and (min-width: 768px) {
@@ -1391,6 +1390,10 @@ body {
   pointer-events: none;
   transform: translateX(100%);
   transition: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden {
+  visibility: hidden;
 }
 
 .mobile-menu__item {
