--- a/sass/layout/_mob-menu.scss
+++ b/sass/layout/_mob-menu.scss
@@ -72,6 +72,10 @@
   transition: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.is-hidden {
+  visibility: hidden;
+}
+
 .mobile-menu__item {
   margin-bottom: 36px;
 }
