--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -13,7 +13,7 @@
     display: flex;
     align-items: baseline;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 }
 
