--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -55,6 +55,9 @@
   @media screen and (max-width: 767px) {
     display: none;
   }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    @include font(null, 12px, 500, 1.14, 0.02em, var(--secondary-text-color));
+  }
 
   @media screen and (min-width: 1200px) {
     @include section(32px, 32px);
@@ -94,7 +97,9 @@
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     margin-bottom: 10px;
   }
-  margin-right: 30px;
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+  }
 }
 
 .header-contact__icon {
